--- a/html/homepage.html
+++ b/html/homepage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="homepage.css">
+		<link rel="stylesheet" type="text/css" href="../css/homepage.css">
 		<meta charset="utf-8">
 		<meta name="discription" content="crowdfunding">
 		<title>EDUFUND</title>
-		<script src="homepage.js"></script>
+		<!-- <script src="../js/homepage.js"></script> -->
+		<script src="../node_modules/web3/dist/web3.min.js"></script>
+
 	</head>
 	<body style=background-color:#e6e6ff;>
 		
@@ -214,5 +216,133 @@
 		</footer> 
 		
 	
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+		<script>
+			if (typeof web3 !== 'undefined') {
+            web3 = new Web3(web3.currentProvider);
+        } else {
+            // set the provider you want from Web3.providers
+			web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
+			
+			web3.eth.defaultAccount = web3.eth.accounts[0];
+
+			const crowdfundingContract = new web3.eth.Contract([
+				{
+					"anonymous": false,
+					"inputs": [
+						{
+							"indexed": false,
+							"internalType": "address",
+							"name": "contractAddress",
+							"type": "address"
+						},
+						{
+							"indexed": false,
+							"internalType": "address",
+							"name": "projectStarter",
+							"type": "address"
+						},
+						{
+							"indexed": false,
+							"internalType": "string",
+							"name": "projectTitle",
+							"type": "string"
+						},
+						{
+							"indexed": false,
+							"internalType": "string",
+							"name": "projectDesc",
+							"type": "string"
+						},
+						{
+							"indexed": false,
+							"internalType": "uint256",
+							"name": "deadline",
+							"type": "uint256"
+						},
+						{
+							"indexed": false,
+							"internalType": "uint256",
+							"name": "goalAmount",
+							"type": "uint256"
+						}
+					],
+					"name": "ProjectStarted",
+					"type": "event"
+				},
+				{
+					"inputs": [],
+					"name": "functionCalled",
+					"outputs": [
+						{
+							"internalType": "string",
+							"name": "",
+							"type": "string"
+						}
+					],
+					"stateMutability": "view",
+					"type": "function"
+				},
+				{
+					"inputs": [],
+					"name": "returnAllProjects",
+					"outputs": [
+						{
+							"internalType": "contract Project[]",
+							"name": "",
+							"type": "address[]"
+						}
+					],
+					"stateMutability": "view",
+					"type": "function"
+				},
+				{
+					"inputs": [],
+					"name": "sendEther",
+					"outputs": [
+						{
+							"internalType": "string",
+							"name": "",
+							"type": "string"
+						}
+					],
+					"stateMutability": "view",
+					"type": "function"
+				},
+				{
+					"inputs": [
+						{
+							"internalType": "string",
+							"name": "title",
+							"type": "string"
+						},
+						{
+							"internalType": "string",
+							"name": "description",
+							"type": "string"
+						},
+						{
+							"internalType": "uint256",
+							"name": "durationInDays",
+							"type": "uint256"
+						},
+						{
+							"internalType": "uint256",
+							"name": "amountToRaise",
+							"type": "uint256"
+						}
+					],
+					"name": "startProject",
+					"outputs": [],
+					"stateMutability": "nonpayable",
+					"type": "function"
+				}
+			],
+			"0x4d80f230dc65C3096d2A5E8825BEA755c29E7cB0"
+			);
+			console.log(crowdfundingContract);
+        }
+		</script>
 	</body>
 </html>
