Instantiate Project Contract script

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -7,6 +7,8 @@
 		<title>EDUFUND</title>
 		<script src="../node_modules/web3/dist/web3.min.js"></script>
 		<script src="../js/crowdfundinginstance.js"></script>
+		<script src="../js/homepage.js"></script>
+		<script src="../js/projectinstance.js"></script>
 
 	</head>
 	<body style=background-color:#e6e6ff;>
